Add play/pause buttons to Android app

--- a/examples/android/src/app/src/main/res/values/strings.xml
+++ b/examples/android/src/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ServoMedia</string>
+    <string name="button_play">Play</string>
+    <string name="button_pause">Pause</string>
 </resources>
